@@ -2275,7 +2275,7 @@ process_file (JCF *jcf, FILE *out)
 	  /* Generate an entry for the class objects.  */
 	  generate_access (out, ACC_PUBLIC);
 	  fprintf (out, "  // gcj private: Do NOT use this field.\n");
-	  fprintf (out, "  static ::java::lang::Class class$$;\n");
+	  fprintf (out, "  // static ::java::lang::Class class$$;\n");
 	  generate_access (out, ACC_PUBLIC);
 	  fprintf (out, "\n  static ::java::lang::Class &class$;\n");
 
